--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "semantic-ui-react": "^0.86.0"
+    "semantic-ui-react": "^0.86.0",
+    "typed.js": "^2.0.10"
   },
   "scripts": {
     "start": "react-scripts start",
