More UI Changes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Ctrl+Alt+Connect",
+  "name": "CtrlAltConnect",
   "version": "1.0.0",
   "description": "Social network for developers",
   "main": "server.js",
